<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/colorBackground"
    android:orientation="vertical">


    <TextView
        android:id="@+id/resultField"
        android:layout_width="403dp"
        android:layout_height="60dp"
        android:background="@color/colorBackground"
        android:gravity="right"
        android:hint="@string/_0"
        android:padding="5dp"
        android:textColor="@color/colorText1"
        android:textSize="45sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tx_M"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginBottom="2dp"
        android:text="@string/m"
        android:textColor="@color/colorText1"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toStartOf="@+id/tx_A"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:layout_constraintVertical_chainStyle="spread" />

    <TextView
        android:id="@+id/tx_A"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginBottom="2dp"
        android:text="@string/a"
        android:textColor="@color/colorText1"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toStartOf="@+id/tx_R"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toEndOf="@+id/tx_M"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:layout_constraintVertical_chainStyle="spread" />

    <TextView
        android:id="@+id/tx_R"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginBottom="2dp"
        android:text="@string/r"
        android:textColor="@color/colorText1"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toStartOf="@+id/tx_A1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toEndOf="@+id/tx_A"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:layout_constraintVertical_chainStyle="spread" />

    <TextView
        android:id="@+id/tx_A1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginBottom="2dp"
        android:text="@string/a"
        android:textColor="@color/colorText1"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toStartOf="@+id/tx_K"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toEndOf="@+id/tx_R"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:layout_constraintVertical_chainStyle="spread" />

    <TextView
        android:id="@+id/tx_K"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginBottom="2dp"
        android:text="@string/k"
        android:textColor="@color/colorText1"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toStartOf="@+id/tx_I"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toEndOf="@+id/tx_A1"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:layout_constraintVertical_chainStyle="spread" />

    <TextView
        android:id="@+id/tx_I"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginBottom="2dp"
        android:text="@string/i"
        android:textColor="@color/colorText1"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toStartOf="@+id/tx_N"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toEndOf="@+id/tx_K"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:layout_constraintVertical_chainStyle="spread" />

    <TextView
        android:id="@+id/tx_N"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginBottom="2dp"
        android:text="@string/n"
        android:textColor="@color/colorText1"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toStartOf="@+id/tx_A2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toEndOf="@+id/tx_I"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:layout_constraintVertical_chainStyle="spread" />

    <TextView
        android:id="@+id/tx_A2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginBottom="2dp"
        android:text="@string/a"
        android:textColor="@color/colorText1"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toEndOf="@+id/tx_N"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:layout_constraintVertical_chainStyle="spread" />

    <Button
        android:id="@+id/bt_clean"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginStart="1dp"
        android:backgroundTint="@color/colorButton3"
        android:gravity="center"
        android:text="@string/clean"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <Button
        android:id="@+id/bt_sign"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginStart="1dp"
        android:backgroundTint="@color/colorButton3"
        android:gravity="center"
        android:text="@string/sign"
        android:textSize="40sp"
        app:layout_constraintStart_toEndOf="@id/bt_clean"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <Button
        android:id="@+id/bt_percent"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginStart="1dp"
        android:backgroundTint="@color/colorButton3"
        android:gravity="center"
        android:text="@string/percent"
        android:textSize="40sp"
        app:layout_constraintStart_toEndOf="@id/bt_sign"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <Button
        android:id="@+id/bt_division"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginStart="1dp"
        android:backgroundTint="@color/colorButton2"
        android:gravity="center"
        android:text="@string/division"
        android:textColor="@color/colorText1"
        android:textSize="40sp"
        app:layout_constraintStart_toEndOf="@id/bt_percent"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <Button
        android:id="@+id/bt_7"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:backgroundTint="@color/colorButton"
        android:gravity="center"
        android:text="@string/_7"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_clean" />

    <Button
        android:id="@+id/bt_8"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:backgroundTint="@color/colorButton"
        android:gravity="center"
        android:text="@string/_8"
        android:textSize="40sp"
        app:layout_constraintStart_toEndOf="@id/bt_7"
        app:layout_constraintTop_toBottomOf="@id/bt_sign" />

    <Button
        android:id="@+id/bt_9"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:backgroundTint="@color/colorButton"
        android:gravity="center"
        android:text="@string/_9"
        android:textSize="40sp"
        app:layout_constraintStart_toEndOf="@id/bt_8"
        app:layout_constraintTop_toBottomOf="@id/bt_sign" />

    <Button
        android:id="@+id/bt_multiplication"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:backgroundTint="@color/colorButton2"
        android:gravity="center"
        android:text="@string/_x"
        android:textColor="@color/colorText1"
        android:textSize="40sp"
        app:layout_constraintStart_toEndOf="@id/bt_9"
        app:layout_constraintTop_toBottomOf="@id/bt_sign" />

    <Button
        android:id="@+id/bt_4"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:backgroundTint="@color/colorButton"
        android:gravity="center"
        android:text="@string/_4"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_7" />

    <Button
        android:id="@+id/bt_5"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:backgroundTint="@color/colorButton"
        android:gravity="center"
        android:text="@string/_5"
        android:textSize="40sp"
        app:layout_constraintStart_toEndOf="@id/bt_4"
        app:layout_constraintTop_toBottomOf="@id/bt_7" />

    <Button
        android:id="@+id/bt_2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:backgroundTint="@color/colorButton"
        android:gravity="center"
        android:text="@string/_2"
        android:textSize="40sp"
        app:layout_constraintStart_toEndOf="@id/bt_1"
        app:layout_constraintTop_toBottomOf="@id/bt_4" />

    <Button
        android:id="@+id/bt_minus"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:backgroundTint="@color/colorButton2"
        android:gravity="center"
        android:text="@string/minus"
        android:textColor="@color/colorText1"
        android:textSize="40sp"
        app:layout_constraintStart_toEndOf="@id/bt_6"
        app:layout_constraintTop_toBottomOf="@id/bt_7" />

    <Button
        android:id="@+id/bt_0"
        android:layout_width="201dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:backgroundTint="@color/colorButton"
        android:gravity="center"
        android:text="@string/_0"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_1" />

    <Button
        android:id="@+id/bt_equal"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:backgroundTint="@color/colorButton2"
        android:gravity="center"
        android:text="@string/equal"
        android:textColor="@color/colorText1"
        android:textSize="40sp"
        app:layout_constraintStart_toEndOf="@id/bt_point"
        app:layout_constraintTop_toBottomOf="@id/bt_1" />

    <Button
        android:id="@+id/bt_point"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:backgroundTint="@color/colorButton"
        android:gravity="center"
        android:text="@string/point"
        android:textSize="40sp"
        app:layout_constraintStart_toEndOf="@id/bt_0"
        app:layout_constraintTop_toBottomOf="@id/bt_1" />

    <Button
        android:id="@+id/bt_plus"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:backgroundTint="@color/colorButton2"
        android:gravity="center"
        android:text="@string/plus"
        android:textColor="@color/colorText1"
        android:textSize="40sp"
        app:layout_constraintStart_toEndOf="@id/bt_3"
        app:layout_constraintTop_toBottomOf="@id/bt_4" />

    <Button
        android:id="@+id/bt_1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:backgroundTint="@color/colorButton"
        android:gravity="center"
        android:text="@string/_1"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_4" />

    <Button
        android:id="@+id/bt_3"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:backgroundTint="@color/colorButton"
        android:gravity="center"
        android:text="@string/_3"
        android:textSize="40sp"
        app:layout_constraintStart_toEndOf="@id/bt_2"
        app:layout_constraintTop_toBottomOf="@id/bt_4" />

    <Button
        android:id="@+id/bt_6"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:backgroundTint="@color/colorButton"
        android:gravity="center"
        android:text="@string/_6"
        android:textSize="40sp"
        app:layout_constraintStart_toEndOf="@id/bt_5"
        app:layout_constraintTop_toBottomOf="@id/bt_7" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.17" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

</androidx.constraintlayout.widget.ConstraintLayout>